<resources>
    <string name="app_name">One App</string>
    <string name="user_name">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="enter">ورود</string>
    <string name="setting">تنظیمات</string>
    <string name="about">درباره</string>
    <string name="exit">خروج</string>
    <string name="serverIP">آدرس سرور</string>
    <string name="serverPort">پورت سرور</string>
    <string name="save">ذخیره</string>
    <string name="back">بازگشت</string>
    <string name="fillAllFields">لطفا تمام فیلدها را پر کنید</string>
    <string name="ipAndPortSaved">آی پی و پورت ذخیره شد</string>
    <string name="patiensStaus">وضعیت بیماران</string>
    <string name="menu_exit">خروج</string>
    <string name="en_about">About</string>
    <string name="en_login">Login</string>
    <string name="en_setting">Setting</string>
    <string name="en_patient">Patient</string>
    <string name="en_status">Status</string>

</resources>
